additional info to HTML-template

--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Fresh Tomatoes!</title>
+    <title>P1 Udacity FSND (Movie Trailers)</title>
 
     <!-- Bootstrap 3 -->
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
@@ -97,7 +97,7 @@
       <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">Fresh Tomatoes Movie Trailers</a>
+            <a class="navbar-brand" href="#">P1 Udacity FSND (Movie Trailers)</a>
           </div>
         </div>
       </div>
@@ -107,36 +107,57 @@
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="aS_d0Ayjw4o" data-toggle="modal" data-target="#trailer">
     <img src="http://ia.media-imdb.com/images/M/MV5BMTQ4MDI2MzkwMl5BMl5BanBnXkFtZTYwMjk0NTA5._V1_UX182_CR0,0,182,268_AL_.jpg" width="220" height="342">
     <h2>A Beautiful Mind</h2>
+    <h4>Director: Ron Howard</h4>
+    <p>IMDB rating: 8,2 ★</p>
+    <p>Stars: Russell Crowe, Ed Harris, Jennifer Connelly</p>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="fVIUEcizkPc" data-toggle="modal" data-target="#trailer">
     <img src="http://ia.media-imdb.com/images/M/MV5BMzc1OTEwMTk4OF5BMl5BanBnXkFtZTcwMTEzMDQzMQ@@._V1_UY268_CR2,0,182,268_AL_.jpg" width="220" height="342">
     <h2>Lucky Number Slevin</h2>
+    <h4>Director: Paul McGuigan</h4>
+    <p>IMDB rating: 7,8 ★</p>
+    <p>Stars: Josh Hartnett, Ben Kingsley, Morgan Freeman</p>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="fdadZ_KrZVw" data-toggle="modal" data-target="#trailer">
     <img src="http://ia.media-imdb.com/images/M/MV5BMjA3NzI1ODc1MV5BMl5BanBnXkFtZTcwMzI5NjQwNg@@._V1_UY268_CR5,0,182,268_AL_.jpg" width="220" height="342">
     <h2>In Time</h2>
+    <h4>Director: Andrew Niccol</h4>
+    <p>IMDB rating: 6,7 ★</p>
+    <p>Stars: Justin Timberlake, Amanda Seyfried, Cillian Murphy</p>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="YoHD9XEInc0" data-toggle="modal" data-target="#trailer">
     <img src="http://ia.media-imdb.com/images/M/MV5BMjAxMzY3NjcxNF5BMl5BanBnXkFtZTcwNTI5OTM0Mw@@._V1_UX182_CR0,0,182,268_AL_.jpg" width="220" height="342">
     <h2>Inception</h2>
+    <h4>Director: Christopher Nolan</h4>
+    <p>IMDB rating: 8,8 ★</p>
+    <p>Stars: Leonardo DiCaprio, Joseph Gordon-Levitt, Ellen Page</p>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="qvsgGtivCgs" data-toggle="modal" data-target="#trailer">
     <img src="http://ia.media-imdb.com/images/M/MV5BMjA5NTYzMDMyM15BMl5BanBnXkFtZTgwNjU3NDU2MTE@._V1_UX182_CR0,0,182,268_AL_.jpg" width="220" height="342">
     <h2>Back to the Future</h2>
+    <h4>Director: Robert Zemeckis</h4>
+    <p>IMDB rating: 8,5 ★</p>
+    <p>Stars: Michael J. Fox, Christopher Lloyd, Lea Thompson</p>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="eUdM9vrCbow" data-toggle="modal" data-target="#trailer">
     <img src="http://ia.media-imdb.com/images/M/MV5BMjIyNTQ5NjQ1OV5BMl5BanBnXkFtZTcwODg1MDU4OA@@._V1_UX182_CR0,0,182,268_AL_.jpg" width="220" height="342">
     <h2>Django Unchained</h2>
+    <h4>Director: Quentin Tarantino</h4>
+    <p>IMDB rating: 8,5 ★</p>
+    <p>Stars: Jamie Foxx, Christoph Waltz, Leonardo DiCaprio</p>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="r5X-hFf6Bwo" data-toggle="modal" data-target="#trailer">
     <img src="http://ia.media-imdb.com/images/M/MV5BMjE4MjA1NTAyMV5BMl5BanBnXkFtZTcwNzM1NDQyMQ@@._V1_UX182_CR0,0,182,268_AL_.jpg" width="220" height="342">
     <h2>The Lord of the Rings: The Return of the King</h2>
+    <h4>Director: Peter Jackson</h4>
+    <p>IMDB rating: 8,9 ★</p>
+    <p>Stars: Elijah Wood, Viggo Mortensen, Ian McKellen</p>
 </div>
 
     </div>
